--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.5.0
+autopep8==1.6.0
 boto3==1.21.36
 botocore==1.24.36
 certifi==2021.10.8
@@ -17,6 +18,7 @@ oauthlib==3.2.0
 Pillow==9.1.0
 psycopg2==2.9.3
 psycopg2-binary==2.9.3
+pycodestyle==2.8.0
 pycparser==2.21
 PyJWT==2.3.0
 python-dateutil==2.8.2
@@ -26,5 +28,7 @@ requests-oauthlib==1.3.1
 s3transfer==0.5.2
 six==1.16.0
 sqlparse==0.4.2
+stripe==2.72.0
+toml==0.10.2
 tzdata==2022.1
 urllib3==1.26.9
